fix z-index value of  page's head bar

--- a/Frontend/src/pages/PostDetails/PostDetails.scss
+++ b/Frontend/src/pages/PostDetails/PostDetails.scss
@@ -13,7 +13,7 @@
     height: 53px;
     position: fixed;
     width: 45%;
-    z-index: 90;
+    z-index: 100;
     display: flex;
     flex-direction: row;
 
